# CPP_exercises

./: .gitignore  .gitmodules  README.md
1.4_circleDimensions/: circleDimensions.cpp
2.1_2.2_fuelConsumption/: fuelConsumption.cpp
2.3_gymMembership/: gymMembership.cpp
2.6_multiMillionaire/: multiMillionaire.cpp
2.7_fibonacci/: fibonacci.cpp
3.1_intList/: intList.cpp
3.3_intList/: intList.cpp
assignment3_1_1/: CMakeLists.txt  README.md  main.cpp
assignment3_1_1/account_files/: account_log
assignment3_1_1/banking_application/: CMakeLists.txt  main.cpp
assignment3_1_1/banking_application/include/: bank_account.h  bank_user_group.h
assignment3_1_1/banking_application/src/: CMakeLists.txt  bank_account.cpp  bank_user_group.cpp  user.cpp
assignment3_1_1/includes/: utils.h
assignment3_1_1/src/: CMakeLists.txt  utils.cpp
pre-studies/1.1_1.2_plusMinus/: plusMinus  plusMinus.cpp
pre-studies/1.3_sizeOfTypes/: 1.3_sizeOfTypes  1.3_sizeOfTypes.cpp
pre-studies/1.4_circleDimensions/: circleDimensions
pre-studies/2.1_2.2_fuelConsumption/: fuelConsumption  fuelConsumption.cpp
pre-studies/2.3_gymMembership/: gymMembership
pre-studies/2.4_BMI/: BMI  BMI.cpp
pre-studies/2.5_personNumber/: personNumber  personNumber.cpp
pre-studies/2.6_multiMillionaire/: multiMillionaire
pre-studies/2.7_fibonacci/: fibonacci
pre-studies/3.1_intList/: intList  intList.cpp  test.csv
week1/: customFunc.cpp  customFunc.h  main.cpp
week1/Assignment1_2_4/: main  main.cpp
week1/assignment1_2_3/: customFunc.cpp  customFunc.h
week1/assignment1_2_5/: main.cpp
week1/assignment1_3_2/: bank_account.cpp  bank_account.h  bank_user_group.cpp  main.cpp  user.cpp  user.h  utility_functions.cpp
week10/assignment10_1_1/: CMakeLists.txt  README.md  main.cpp
week10/assignment10_1_2/: CMakeLists.txt  README.md  main.cpp
week10/assignment10_2_1/: CMakeLists.txt  README.md  main.cpp
week10/assignment10_3_1/: CMakeLists.txt  README.md  main.cpp  my_allocator.hpp
week10/assignment10_4_1/: CMakeLists.txt  README.md  main.cpp  monsters.json  person.json
week2/assignment2_1_1/: main.cpp
week2/assignment2_1_3/: main.cpp
week2/assignment2_2_1/: .gitignore  CMakeLists.txt  README.md  main.cpp
week2/assignment2_2_1/utilities/: CMakeLists.txt  food.cpp  food.h  utils.cpp  utils.h
week2/assignment2_2_2/: CMakeLists.txt  README.md  main.cpp
week2/assignment2_2_2/includes/: caesar_cipher.h  math_operations.h
week2/assignment2_2_2/message/: message.txt
week2/assignment2_2_2/src/: CMakeLists.txt  caesar_cipher.cpp  math_operations.cpp
week2/assignment2_2_3/: CMakeLists.txt  board.cpp  instructions.md  main.cpp  random.h
week2/assignment2_3_1/: CMakeLists.txt  exercises.h  exercises.md  main.cpp
week2/assignment2_3_1/exercise1/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise2/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise3/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise4/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise5/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise6/: CMakeLists.txt  main.cpp
week2/assignment2_3_1/exercise7/: CMakeLists.txt  main.cpp
week2/assignment2_3_2/: CMakeLists.txt  exercises.md  main.cpp
week2/assignment2_3_2/includes/: random.h  sensor_data.h
week2/assignment2_3_2/src/: CMakeLists.txt  sensor_data.cpp
week2/assignment2_4_1/: CMakeLists.txt  exercises.md  main.cpp
week2/assignment2_4_1/includes/: file_io.h  get_user_file.h
week2/assignment2_4_1/src/: CMakeLists.txt  dir_text_size.cpp  get_user_file.cpp
week2/assignment2_4_2/: CMakeLists.txt  README.md  main.cpp
week2/assignment2_4_2/includes/: master_device.h  modbus_device.h
week2/assignment2_4_2/modbus_device_storage/: devices.csv  registers.csv
week2/assignment2_4_2/src/: CMakeLists.txt  master_device.cpp  modbus_device.cpp
week3/assignment3_1_2/: CMakeLists.txt  README.md  main.cpp
week3/assignment3_1_2/include/: random.h  utility_functions.h  weather.h  weather_logs.h
week3/assignment3_1_2/src/: CMakeLists.txt  utility_functions.cpp  weather.cpp  weather_logs.cpp
week3/assignment3_1_2/tests/: CMakeLists.txt  tests.cpp
week3/assignment3_1_2/weather_logs/: station_logs.csv
week3/assignment3_2_1/: CMakeLists.txt  README.md  main.cpp
week3/assignment3_2_2/: CMakeLists.txt  main.cpp
week3/assignment3_2_2/src/: CMakeLists.txt  ai_functions.cpp  board.cpp  game_functions.cpp  player_functions.cpp
week3/assignment3_2_3/: CMakeLists.txt  README.md
week3/assignment3_3_1/: CMakeLists.txt  README.md  (+1 more)
week6/assignment6_2_2/: CMakeLists.txt  README.md  main.cpp
week6/assignment6_2_2/include/: c_file_functionality.hpp
week6/assignment6_2_2/src/: CMakeLists.txt  c_file_functionality.cpp
week6/assignment6_2_3/: CMakeLists.txt  README.md  main.cpp
week6/assignment6_2_3/include/: figure.hpp  object.hpp
week6/assignment6_2_3/src/: CMakeLists.txt  figure.cpp  object.cpp
week6/assignment6_3_2/src/: CMakeLists.txt  c_file_functionality.cpp  object.cpp  positive_integer.cpp
week7/assignment7_3_1/: CMakeLists.txt  README.md  main.cpp
week7/assignment7_3_1/include/: car.hpp  helper_class_templates.hpp  object_to_be_compared.hpp
week7/assignment7_4_2/: CMakeLists.txt  README.md  main.cpp
week7/assignment7_4_2/include/: text_box.hpp  ui_utilities.hpp  widget.hpp
week7/assignment7_4_2/src/: CMakeLists.txt  text_box.cpp
week8/assignment8_1_2/: CMakeLists.txt  README.md  animals.csv  main.cpp
week8/assignment8_1_2/include/: animal.hpp  text_parsing.hpp
week8/assignment8_3_1/: CMakeLists.txt  README.md  main.cpp
week8/assignment8_3_1/include/: heap_array.hpp
week8/assignment8_3_1/tests/: CMakeLists.txt  tests.cpp
week8/assignment8_4_1/: CMakeLists.txt  README.md
week8/assignment8_4_1/include/: heap_array.hpp  instance_counter.hpp
week8/assignment8_4_1/tests/: tests.cpp
week8/assignment8_4_2/: CMakeLists.txt  memerror1.cpp  memerror2.cpp  memerror3.cpp
week8/assignment8_4_2/include/: memerror1.hpp  memerror2.hpp  memerror3.hpp
week8/assignment8_4_2/tests/: CMakeLists.txt  tests.cpp
(+169 files in other folders)
